--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -56,6 +56,7 @@
 #custom-temperature,
 #memory,
 #disk,
+#power-profiles-daemon,
 #cpu{
   background-color: rgba(15,27,53,0.9);
   margin-top: 6px;
